--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -2,7 +2,9 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: "Lobster", cursive;
 }
 
@@ -20,10 +22,10 @@ header h2 {
 }
 
 .jumbotron {
-    margin:0;
+    margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color:white;
+    color: white;
 }
 
 .row-content {
@@ -34,4 +36,10 @@ header h2 {
 
 .navbar {
     background-color: #901CAD;
+}
+
+.tab-content {
+    border: 1px solid #DDD;
+    border-top: none;
+    padding: 10px;
 }
