--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -46,7 +46,15 @@ header h2 {
     border: solid #5637DD;
 }
 
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+
 /*
+// disabled for retired tabbed card
 .tab-content {
     border: 1px solid #DDD;
     border-top: none;
