--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -19,7 +19,7 @@ header h2 {
 .jumbotron {
   margin: 0;
   padding: 30px;
-  background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
   color: white; }
 
 .row-content {
@@ -34,7 +34,7 @@ header h2 {
   background-color: rgba(0, 0, 0, 0.5); }
 
 .carousel {
-  border: solid #5637DD; }
+  border: solid #5637dd; }
 
 #carouselButton {
   position: absolute;
