NPM Scripts Part 1

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -13,14 +13,14 @@ header h2 {
   color: #CEC8FF; }
 
 .site-footer {
-  background-image: linear-gradient(#CEC8FF, white);
+  background-image: linear-gradient(#CEC8FF, #fff);
   padding: 20px 0; }
 
 .jumbotron {
   margin: 0;
   padding: 30px;
   background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
-  color: white; }
+  color: #fff; }
 
 .row-content {
   padding: 50px 0;
