--- a/css/mystyles.scss
+++ b/css/mystyles.scss
@@ -3,6 +3,7 @@ $color-secondary: #5637dd;
 $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
+$color-white: #fff;
 $color-transparent-black: rgba(0, 0, 0, 0.5);
 
 $body-font: "Open Sans", sans-serif;
@@ -29,7 +30,7 @@ header {
 }
 
 .site-footer {
-    background-image: linear-gradient($color-pale, white);
+    background-image: linear-gradient($color-pale, $color-white);
     padding: 20px 0;
 }
 
@@ -37,7 +38,7 @@ header {
     margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, $color-secondary, $color-primary, $color-dark);
-    color: white;
+    color: $color-white;
 }
 
 .row-content {
