--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -42,6 +42,14 @@ header h2 {
   bottom: 0;
   z-index: 1; }
 
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: #fff; }
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: #fff; }
+
 /*  //disabled for retired tabbed card
 .tab-content {
     border: 1px solid #DDD;
