--- a/css/mystyles.scss
+++ b/css/mystyles.scss
@@ -4,7 +4,9 @@ $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
 $color-white: #fff;
+$color-teal: #17A2B8;
 $color-transparent-black: rgba(0, 0, 0, 0.5);
+$color-test: #FF0000;
 
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
@@ -64,6 +66,20 @@ header {
     right: 0;
     bottom: 0;
     z-index: 1;
+}
+
+#reserveModal {
+    .modal-header {
+        background-color: $color-teal;
+        color: $color-white;
+    }
+}
+
+#loginModal {
+    .modal-header {
+        background-color: $color-mid;
+        color: $color-white;
+    }
 }
 
 /*  //disabled for retired tabbed card
